--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,22 +9,37 @@
 <body>
     <section>
                 <h1>HTML & 4 questions!!</h1>
-                <p>Here is the first paragraph Tag</p>
+                <p>What is your favorite code camp?</p>
                 <p>Is your favorite header tag h1?</p>
-                <p>Do you use the section tag to wrap html?</p>
-                <p>Is this your first time reading a questionnaire</p>
+                <p>Do you drink Yerba Mate?</p>
+                <p>What show are you currently binging?</p>
 
     </section>
     <section>
-                <h2>This will be the Second Header</h2>
-                <p>The second header has an h2 Tag</p>
-                <p>There are several levels of header tags</p>
+                <h2>Additional Messages</h2>
+                <p>Caffeine is great</p>
+                <p>Watch some scary shows</p>
 
 
     </section>
 
     <script>
-            prompt("Is your favorite header tag h1?")
+            const name      = prompt("What is your favorite code camp?");
+            alert("Hey, me too!")
+            console.log(name);
+
+            const header    = confirm("Are the Green Bay Packers your favorite FNL team?");
+            alert("...I new it.")
+            console.log(header);
+
+            const show      = prompt("What show are you currently binging?");
+            alert("Nice, I just got into Black Mirror!")
+            console.log(show);            
+
+            const tea       = confirm("Do you drink Yerba Mate?");
+            alert("I'm all hyped out on caffeine!!")
+            console.log(tea);
+            
 
     </script>
     
