completed js for day 2

--- a/index.html
+++ b/index.html
@@ -18,32 +18,12 @@
     <section>
                 <h2>Additional Messages</h2>
                 <p>Caffeine is great</p>
-                <p>Watch some scary shows</p>
+                <p>Watch some scary shows</p>j
 
 
     </section>
 
-    <script>
-            const name      = prompt("What is your favorite code camp?");
-            alert("Hey, me too!")
-            console.log(name);
-
-            const header    = confirm("Are the Green Bay Packers your favorite FNL team?");
-            alert("...I new it.")
-            console.log(header);
-
-            const show      = prompt("What show are you currently binging?");
-            alert("Nice, I just got into Black Mirror!")
-            console.log(show);            
-
-            const tea       = confirm("Do you drink Yerba Mate?");
-            alert("I'm all hyped out on caffeine!!")
-            console.log(tea);
-            
-
-    </script>
+    <script src= "app.js"> </script>
     
 </body>
-</html>
-
-//outside
+</html}
