all JS updated & CSS applied

--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <link href="style.css" type="text/css" rel="stylesheet" />
+
 </head>
+
+<header>This is a header</header>
+
 <body>
     <section>
-                <h1>HTML & 4 questions!!</h1>
+                <h1>HTML & 5 Questions!!</h1>
                 <p>What is your favorite code camp?</p>
                 <p>Is your favorite header tag h1?</p>
                 <p>Do you drink Yerba Mate?</p>
                 <p>What show are you currently binging?</p>
+                <p>Bonus Question!</p>
 
     </section>
     <section>
                 <h2>Additional Messages</h2>
                 <p>Caffeine is great</p>
-                <p>Watch some scary shows</p>j
+                <p>Watch some scary shows</p>
 
 
     </section>
@@ -26,4 +33,5 @@
     <script src= "app.js"> </script>
     
 </body>
+<footer>This is a footer</footer>
 </html}
