corrected mistakes from original turn in

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 
 </head>
 
-<header>This is a header</header>
 
 <body>
+    <header>This is a header</header>
+
     <section>
-                <h1>HTML & 5 Questions!!</h1>
+                <h1>HTML &amp; 5 Questions!!</h1>
                 <p>What is your favorite code camp?</p>
                 <p>Is your favorite header tag h1?</p>
                 <p>Do you drink Yerba Mate?</p>
@@ -30,8 +31,9 @@
 
     </section>
 
-    <script src= "app.js"> </script>
-    
+    <footer>This is a footer</footer>
+
+    <script src= "app.js"> </script>    
 </body>
-<footer>This is a footer</footer>
-</html}
+
+</html>
