added list HTML & guess my age JS

--- a/index.html
+++ b/index.html
@@ -14,21 +14,41 @@
 <body>
     <header>This is a header</header>
 
-    <section>
-                <h1>HTML &amp; 5 Questions!!</h1>
-                <p>What is your favorite code camp?</p>
-                <p>Is your favorite header tag h1?</p>
-                <p>Do you drink Yerba Mate?</p>
-                <p>What show are you currently binging?</p>
-                <p>Bonus Question!</p>
+    <section></section>
+       <h1>HTML &amp; 5 Questions!!</h1>                <p>What is your favorite code camp?</p>
+            <p>Is your favorite header tag h1?</p>
+            <p>Do you drink Yerba Mate?</p>
+            <p>What show are you currently binging?</p>
+            <p>Bonus Question!</p>
 
     </section>
+
     <section>
-                <h2>Additional Messages</h2>
-                <p>Caffeine is great</p>
-                <p>Watch some scary shows</p>
+         <h2>Additional Messages</h2>
+            <p>Caffeine is great</p>
+            <p>Watch some scary shows</p>
+    </section>
 
-
+    <section>
+        <h2>How bout some lists?</h2>
+            
+        <h4>Favorite Cites!</h4>
+            <ol>
+                <li>Copenhagen</li>
+                <li>Milwaukee</li>
+                <li>Portland</li>
+                <li>Denver</li>
+            </ol>
+        <h4>Some favorite outdoor activities</h4>
+            <ul>
+                <li>Elploring new places</li>
+                <li>Going to sporting events</li>
+                <li>Riding my bike</li>
+                <li>Relaxing</li>
+                <li>Running</li>
+                <li>Diving</li>
+            </ul>
+        
     </section>
 
     <footer>This is a footer</footer>
