progress with the CSS list properties

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         <h4>Some favorite outdoor activities</h4>
             <ul>
                 <li>Elploring new places</li>
-                <li>Going to sporting events</li>
                 <li>Riding my bike</li>
                 <li>Relaxing</li>
                 <li>Running</li>
-                <li>Diving</li>
             </ul>
         
     </section>
+
+    <div id="circle"></div>
 
     <footer>This is a footer</footer>
 
