updated CSS & JS for turn in

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 
     </section>
 
-    <section>
-         <h2>Additional Messages</h2>
+    <section>    
+        <h2>Additional Messages</h2>
+
             <p>Caffeine is great</p>
             <p>Watch some scary shows</p>
     </section>
@@ -41,15 +42,13 @@
             </ol>
         <h4>Some favorite outdoor activities</h4>
             <ul>
-                <li>Elploring new places</li>
-                <li>Riding my bike</li>
+                <li>Elploring</li>
+                <li>Biking</li>
                 <li>Relaxing</li>
                 <li>Running</li>
             </ul>
         
     </section>
-
-    <div id="circle"></div>
 
     <footer>This is a footer</footer>
 
