updated AboutMe with additional CSS

--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 
 
 <body>
-    <header>This is a header</header>
+    <header>
+        <nav>
+            <ul>
+                <li><a href='#'></a>Caffeine</li> 
+                <li><a href='#'></a>Home</li> 
+                <li><a href='#'></a>Scary Shows</li> 
+            </ul>
+        </nav>
+    </header>
 
     <section></section>
        <h1>HTML &amp; 5 Questions!!</h1>                <p>What is your favorite code camp?</p>
@@ -41,14 +49,18 @@
                 <li>Denver</li>
             </ol>
         <h4>Some favorite outdoor activities</h4>
-            <ul>
+            <ol>
                 <li>Elploring</li>
                 <li>Biking</li>
                 <li>Relaxing</li>
                 <li>Running</li>
-            </ul>
+            </ol>
         
     </section>
+
+    <aside>
+
+    </aside>
 
     <footer>This is a footer</footer>
 
